data/issues_nolabel/nolabel_test_15276.txt
[XLA] Fix OS/X compile error with std::transform and  std::addressof

I don't know if this has been flagged up elsewhere...
on my platform (OS/X, XLA), I receive the following error when trying to compile tensorflow/compiler/xla/service/llvm_ir/kernel_support_library.cc:
tensorflow/compiler/xla/service/llvm_ir/kernel_support_library.cc:101:5: error: no matching function for call to 'transform'
    std::transform(function->arg_begin(), function->arg_end(),
    ^~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1922:1: note: candidate template ignored: couldn't infer template argument '_UnaryOperation'
transform(_InputIterator __first, _InputIterator __last, _OutputIterator __result, _UnaryOperation __op)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1932:1: note: candidate function template not viable: requires 5 arguments, but 4 were provided
transform(_InputIterator1 __first1, _InputIterator1 __last1, _InputIterator2 __first2,
^

It is possible that std::addressof cannot be matched with the unary function template.
This code change replaces addressof with an function, which does match std::function<> ok.